blockml/test/errors/03_view/e290/e290.view
view: e290
derived_table: |
  'SELECT * FROM ...'
pdt_trigger_sql: SELECT 1    
fields:
- dimension: dim1
  sql: 111



